# DeepSSIM

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: test_set.csv
scripts/: compute_matrix.py  compute_ssim.py  eval.py  eval_ssim.py  plot_reports.py  train.py
src/datasets/: chen.py  dar.py  deepssim.py
src/extractors/: base.py  chen.py  dar.py  deepssim.py
src/factories/: base.py  chen.py  dar.py  deepssim.py  registry.py
src/scorers/: base.py  chen.py  dar.py  deepssim.py
src/train/: dataset.py  embedder_net.py  similarity_net.py
src/utils/: log.py  meter.py  model.py  plot.py  ssim.py  utils.py
